System公共文件节点提交

--- a/lrapp-bsm-client/app/system/group/view/groupCard.html
+++ b/lrapp-bsm-client/app/system/group/view/groupCard.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" ng-if="isCard">
+<form class="form-horizontal" ng-if="card">
     <div class="lr-toolbar">
         <div class="btn-group">
             <button class="btn btn-azure" type="button" ng-click="onSave()"
