--- a/lrapp-bsm-client/app/system/group/view/groupGrid.html
+++ b/lrapp-bsm-client/app/system/group/view/groupGrid.html
@@ -1,4 +1,4 @@
-<div class="form-horizontal">
+<div class="form-horizontal" >
     <accordion>
         <accordion-group is-open="status.open" class="lr-page-bg-gray" grid-button="true">
             <accordion-heading class="lr-page-bg-white">
@@ -8,11 +8,11 @@
                 </div>
                 <div class="form-group pull-right">
                     <div class="btn-group">
-                        <button class="btn btn-primary btn-sm" ng-click="onQuery();">
+                        <button class="btn lr-main-btn" ng-click="onQuery();">
                             <i class="fa fa-search"></i>
                             <span>查询</span>
                         </button>
-                        <button class="btn btn-return btn-sm" ng-click="onReset();">
+                        <button class="btn lr-main-btn" ng-click="onReset();">
                             <i class="fa fa-undo"></i>
                             <span>重置</span>
                         </button>
@@ -42,32 +42,45 @@
 <div class="lr-grid-container">
     <div>
         <accordion>
-            <accordion-group is-open="true" grid-button="true">
+            <accordion-group is-open="true"  grid-button="true">
                 <accordion-heading class="lr-page-bg-white">
-                    <div class="lr-grid-toolbar">
-                        <div class="btn-group text-right" add-grid-btn>
+                    <div class="lr-grid-toolbar" >
+                        <div class="btn lr-page-bg-indigo">
+                            <i class="fa fa-database lr-page-color" aria-hidden="true"></i>
+                            <span class="lr-page-color">查询结果</span>
+                        </div>
+                        <div class="btn-group lr-grid-btn-right" add-grid-btn>
 
-                            <button class="btn btn-primary btn-sm" ng-click="onAdd()">
+                            <button class="btn lr-main-btn" ng-click="onAdd()">
+                                        <i class="fa fa-plus"></i>
+                                    增加
+                                    </button>
+
+                                    <button class="btn lr-main-btn" ng-click="onEdit()" >
+                                        <i class="fa fa-plus"></i>
+                                    修改
+                                    </button>
+
+                                    <button class="btn lr-main-btn" ng-click="onDelete()" >
+                                        <i class="fa fa-plus"></i>
+                                    删除
+                                    </button>
+                                    <button class="btn lr-main-btn" ng-click="onCard()">
+                                        <i class="fa fa-plus"></i>
+                                    卡片
+                                    </button>
+                            <button class="btn lr-main-btn" ng-click="onAuthorization()">
                                 <i class="fa fa-plus"></i>
-                                增加
-                            </button>
-                            <button class="btn btn-primary btn-sm" ng-click="onEdit()" ng-disabled="checkStatus(gridApi,'','',true)">
-                                <i class="fa fa-edit"></i>
-                                修改
-                            </button>
-
-                            <button class="btn btn-danger btn-sm" ng-click="onDelete()" ng-disabled="checkStatus(gridApi,'','',true)">
-                                <i class="fa fa-times"></i>
-                                删除
-                            </button>
-                            <button class="btn btn-success btn-sm" ng-click="onAuthorization()" ng-disabled="checkStatus(gridApi,'','',true)">
-                                <i class="fa fa-gavel"></i>
                                 分配权限
+                            </button>
+                            <button class="btn lr-main-btn" ng-click="viewClause(gridApi)" ng-disabled="checkStatus(gridApi,'','',true)" >
+                                <i class="fa fa-joomla"></i>
+                                查看附件
                             </button>
                         </div>
                     </div>
                 </accordion-heading>
-                <div class="clearfix lr-page-margin" ng-style="gridHtmlHeight()">
+                <div class="clearfix lr-page-margin" ng-style="getGridHtmlStyle('','',470,0)">
                     <div ui-grid="gridOptions" ui-grid-pagination ui-grid-auto-resize ui-grid-resize-columns ui-grid-selection ui-grid-pinning class="grid" style="min-height: 100%"></div>
                 </div>
             </accordion-group>
