客户及客户信息变更

--- a/app/css/public.css
+++ b/app/css/public.css
@@ -854,7 +854,7 @@
 }
 
 .lr-page-bg-indigo {
-/*    background-color:  #022055 !important;*/
+    background-color:  #ffffff !important;
 }
 
 .lr-page-color {
