--- a/app/css/public.css
+++ b/app/css/public.css
@@ -2603,5 +2603,6 @@ a,a:hover,a:link,a:visited {
 
 .main-panel {
     margin: 15px;
-    font-size: 14px;
+    /*color: #0033b3;*/
+    /*font-size: 14px;*/
 }
